--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,23 @@ edition = "2024"
 hyper = { version = "1.6.0", features = ["http1", "server"] }
 hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
 hyper-staticfile = "0.10"
-tokio = { version = "1.45.1", features = ["rt-multi-thread", "net", "fs", "time", "macros"] }
+tokio = { version = "1.45.1", features = [
+    "rt-multi-thread",
+    "net",
+    "fs",
+    "time",
+    "macros",
+] }
 clap = { version = "4.5", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
-serde_yaml = "0.9"
-reqwest = { version = "0.12", features = ["json"] }
+serde_yml = "0.0.12"
+reqwest = { version = "0.12", features = [
+    "json",
+    "rustls-tls-native-roots",
+    "http2",
+    "stream",
+    "charset",
+], default-features = false }
 base64 = "0.22"
 hmac = "0.12"
 sha2 = "0.10"
@@ -22,7 +34,7 @@ tracing-subscriber = "0.3"
 serde-querystring = "0.3.0"
 bytes = "1.10.1"
 futures-util = "0.3.31"
-prometheus = { version = "0.13", features = ["process"] }
+prometheus = { version = "0.14", features = ["process"] }
 lazy_static = "1.4"
 radix_trie = "0.2"
 arc-swap = "1.7"
