--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ sha2 = "0.10"
 hex = "0.4"
 anyhow = "1.0"
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 serde-querystring = "0.3.0"
 bytes = "1.10.1"
 futures-util = "0.3.31"
@@ -34,9 +34,11 @@ radix_trie = "0.2"
 arc-swap = "1.7"
 moka = { version = "0.12", features = ["future"] }
 chrono = { version = "0.4", features = ["serde"] }
-librqbit = { version = "8.1.1", default-features = false, features = [
+librqbit = { git = "https://github.com/ikatson/rqbit.git", tag = "v9.0.0-beta.1", default-features = false, features = [
     "rust-tls",
 ] }
+serde_json = "1.0.140"
+dav-server = { version = "0.8.0", features = ["hyper"] }
 
 [profile.release]
 lto = true
